kubernetes/apps/default/tautulli/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.torquasmvo.com`)
      kind: Rule
      services:
        - name: tautulli
          namespace: default
          port: 8181
  tls:
    secretName: traefik-dashboard-tls
